RESOLVED FIXED104800
Layout Test inspector-protocol/take-heap-snapshot.html crashes in the Debug mode
https://bugs.webkit.org/show_bug.cgi?id=104800
Summary Layout Test inspector-protocol/take-heap-snapshot.html crashes in the Debug mode
Kentaro Hara
Reported 2012-12-12 05:28:01 PST
The following layout test is failing on the Debug mode in all platforms inspector-protocol/take-heap-snapshot.html Probable cause: crash log for DumpRenderTree (pid 17694): STDOUT: <empty> STDERR: STDERR: STDERR: # STDERR: # Fatal error in v8/src/heap-inl.h, line 189 STDERR: # CHECK(allocation_allowed_ && gc_state_ == NOT_IN_GC) failed STDERR: # STDERR: For now, I'll mark the test as CRASH. Please investigate.
Attachments
Patch (7.03 KB, patch)
2013-01-31 00:18 PST, Yury Semikhatsky
jochen: review+
Yury Semikhatsky
Comment 1 2012-12-12 05:38:54 PST
*** Bug 104801 has been marked as a duplicate of this bug. ***
Yury Semikhatsky
Comment 2 2013-01-30 06:58:42 PST
Yury Semikhatsky
Comment 3 2013-01-31 00:18:46 PST
Yury Semikhatsky
Comment 4 2013-01-31 00:19:59 PST
Marja, can you confirm that disabling Profiler.reportHeapSnapshotProgress events by default doesn't break your tools?
Ilya Tikhonovsky
Comment 5 2013-01-31 00:26:44 PST
Comment on attachment 185699 [details] Patch lgtm
jochen
Comment 6 2013-01-31 00:29:12 PST
Comment on attachment 185699 [details] Patch Since the parameter is optional, and the default behavior is the old behavior, there shouldn't be a problem. thx for the heads up
Yury Semikhatsky
Comment 7 2013-01-31 00:34:15 PST
(In reply to comment #6) > (From update of attachment 185699 [details]) > Since the parameter is optional, and the default behavior is the old behavior, there shouldn't be a problem. > > thx for the heads up Actually the behavior changed compared to the old one: we used to send the events by default but after the change they will only be sent if the flag is true. That's why I'm asking. I didn't want to add doNotReportProgress optional flag as we normally prefer features opted out by default and here it would be an opposite meaning.
jochen
Comment 8 2013-01-31 00:39:00 PST
(In reply to comment #7) > (In reply to comment #6) > > (From update of attachment 185699 [details] [details]) > > Since the parameter is optional, and the default behavior is the old behavior, there shouldn't be a problem. > > > > thx for the heads up > > Actually the behavior changed compared to the old one: we used to send the events by default but after the change they will only be sent if the flag is true. That's why I'm asking. I didn't want to add doNotReportProgress optional flag as we normally prefer features opted out by default and here it would be an opposite meaning. Thanks for clarifying. However, we don't depend on that feature in any way, so please go ahead!
Yury Semikhatsky
Comment 9 2013-01-31 00:47:28 PST
Note You need to log in before you can comment on or make changes to this bug.