Layout Test inspector-protocol/take-heap-snapshot.html crashes in the Debug mode https://bugs.webkit.org/show_bug.cgi?id=104800

Reviewed by Jochen Eisinger.

Source/WebCore:

The test crashed because during snapshot generation Profiler.reportHeapSnapshotProgress
events were sent to the inspector front-end, then parsed and dispatched there.
Since in case of layout tests the front-end resides in the same process
as the inspected page parsing the event broke an assumption that there are
no JS heap allocations while heap snapshot is being taken.

I added optional boolean parameter 'reportProgress' to Profiler.takeHeapSnapshot
command so that the protocol client can control whether progress events should
be sent during snapshot generation. The protocol test is not interested in the
progress events and sets reportProgress to false.

Test: inspector-protocol/heap-profiler/take-heap-snapshot.html

* inspector/Inspector.json:
* inspector/InspectorProfilerAgent.cpp:
(WebCore::InspectorProfilerAgent::takeHeapSnapshot):
* inspector/InspectorProfilerAgent.h:
(InspectorProfilerAgent):
* inspector/front-end/ProfilesPanel.js:
(WebInspector.ProfilesPanel.prototype.takeHeapSnapshot):

LayoutTests:

Marked the test as not crashing in the debug mode.

* inspector-protocol/heap-profiler/take-heap-snapshot.html:
* platform/chromium/TestExpectations:

Canonical link: https://commits.webkit.org/126660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141388 268f45cc-cd09-0410-ab3c-d52691b4dbfc